--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install GCC
-        run: sudo apt-get update && sudo apt-get install -y gcc python3 python3-pip
+      - name: Install GCC and Python dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc python3 python3-pip
+          pip install numpy
 
       - name: Build project
         run: gcc main.c -std=c2x -lm -o matrix
