--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Clone ITMO test suite
         run: git clone https://github.com/se-c-cpp-prog/public-tests-2025.git
 
-      - name: Copy project executable into test folder
+      - name: Copy compiled binary into test folder
         run: cp matrix public-tests-2025/
 
-      - name: Run tests from correct directory
+      - name: Run ITMO tests
         working-directory: public-tests-2025
-        run: python3 main.py ..
+        run: python3 main.py --program ./matrix --suite math
