--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,31 +1,18 @@
-﻿name: ITMO Matrix Tests
-
+﻿# .github/workflows/ci.yml
+name: matrix-tests
 on:
   push:
   pull_request:
-
+  workflow_dispatch:
 jobs:
-  test:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Install GCC and Python dependencies
+      - uses: actions/checkout@v4
+      - name: Install deps
+        run: sudo apt-get update && sudo apt-get install -y gcc python3
+      - name: Build
+        run: gcc main.c -std=c2x -O2 -lm -o matrix
+      - name: Run public tests
         run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc python3 python3-pip
-          pip install numpy
-
-      - name: Build project
-        run: gcc main.c -std=c2x -lm -o matrix
-
-      - name: Clone ITMO test suite
-        run: git clone https://github.com/se-c-cpp-prog/public-tests-2025.git
-
-      - name: Copy compiled binary into test folder
-        run: cp matrix public-tests-2025/
-
-      - name: Run ITMO tests
-        working-directory: public-tests-2025
-        run: python3 main.py --program ./matrix --suite math
+          python3 public-tests-2025/main.py --program ./matrix --suite math
