--- a/.github/workflows/itmo-matrix.yml
+++ b/.github/workflows/itmo-matrix.yml
@@ -16,7 +16,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up C compiler
-        run: sudo apt-get update && sudo apt-get install -y gcc
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc
 
       - name: Build project
         run: |
@@ -30,10 +32,8 @@ jobs:
       - name: Clone ITMO test suite
         run: |
           git clone https://github.com/se-c-cpp-prog/itmo-tests.git
-          cd itmo-tests
-          ls
 
-      - name: Run tests
+      - name: Run ITMO matrix tests
         run: |
           cd itmo-tests
           python3 main.py --program ../matrix --suite math
