--- a/.github/workflows/itmo-matrix.yml
+++ b/.github/workflows/itmo-matrix.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build-and-test:
@@ -15,7 +16,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install dependencies
+      - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y gcc python3 git
@@ -24,10 +25,16 @@ jobs:
         run: |
           gcc main.c -std=c23 -lm -o matrix
 
-      - name: Clone 2025 public tests
+      - name: Clone 2025 test repository
         run: |
           git clone https://github.com/se-c-cpp-prog/public-tests-2025.git
+          ls -R public-tests-2025
 
       - name: Run 2025 test suite
         run: |
-          python3 public-tests-2025/main.py --program ./matrix --suite math
+          if [ -f public-tests-2025/main.py ]; then
+            python3 public-tests-2025/main.py --program ./matrix --suite math
+          else
+            echo "Error: main.py not found inside public-tests-2025" >&2
+            exit 1
+          fi
