--- a/.github/workflows/itmo-matrix.yml
+++ b/.github/workflows/itmo-matrix.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install system dependencies
+      - name: Install GCC and Python
         run: |
           sudo apt-get update
           sudo apt-get install -y gcc python3 git
@@ -24,17 +24,23 @@ jobs:
       - name: Build matrix calculator
         run: |
           gcc main.c -std=c23 -lm -o matrix
+          ls -la
 
-      - name: Clone 2025 test repository
+      - name: Clone public test repository (2025)
         run: |
-          git clone https://github.com/se-c-cpp-prog/public-tests-2025.git
-          ls -R public-tests-2025
+          echo "Cloning tests into workspace..."
+          git clone https://github.com/se-c-cpp-prog/public-tests-2025.git $GITHUB_WORKSPACE/public-tests-2025
+          ls -R $GITHUB_WORKSPACE/public-tests-2025
 
-      - name: Run 2025 test suite
+      - name: Verify test suite location
         run: |
-          if [ -f public-tests-2025/main.py ]; then
-            python3 public-tests-2025/main.py --program ./matrix --suite math
-          else
-            echo "Error: main.py not found inside public-tests-2025" >&2
+          echo "Verifying main.py existence..."
+          if [ ! -f "$GITHUB_WORKSPACE/public-tests-2025/main.py" ]; then
+            echo "Error: public-tests-2025/main.py not found!"
             exit 1
           fi
+
+      - name: Run ITMO 2025 matrix tests
+        run: |
+          cd $GITHUB_WORKSPACE
+          python3 public-tests-2025/main.py --program ./matrix --suite math
