--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,18 +23,22 @@ jobs:
 
       - name: Build matrix calculator
         run: |
-          gcc main.c -std=c23 -lm -o matrix
+          echo "Compiling main.c..."
+          if gcc main.c -std=c23 -lm -o matrix 2>/dev/null; then
+            echo "Compiled with -std=c23"
+          else
+            echo "Falling back to -std=c2x"
+            gcc main.c -std=c2x -lm -o matrix
+          fi
           ls -la
 
-      - name: Clone public test repository (2025)
+      - name: Clone 2025 test repository
         run: |
-          echo "Cloning tests into workspace..."
           git clone https://github.com/se-c-cpp-prog/public-tests-2025.git $GITHUB_WORKSPACE/public-tests-2025
           ls -R $GITHUB_WORKSPACE/public-tests-2025
 
       - name: Verify test suite location
         run: |
-          echo "Verifying main.py existence..."
           if [ ! -f "$GITHUB_WORKSPACE/public-tests-2025/main.py" ]; then
             echo "Error: public-tests-2025/main.py not found!"
             exit 1
