--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,10 +16,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install GCC and Python
+      - name: Install GCC, Python, and required packages
         run: |
           sudo apt-get update
-          sudo apt-get install -y gcc python3 git
+          sudo apt-get install -y gcc python3 python3-pip git
+          python3 -m pip install --upgrade pip
+          python3 -m pip install numpy
 
       - name: Build matrix calculator
         run: |
