--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,15 +34,21 @@ jobs:
           fi
           ls -la
 
-      - name: Clone 2025 test repository
+      - name: Clone 2025 test repository (with submodules)
         run: |
-          git clone https://github.com/se-c-cpp-prog/public-tests-2025.git $GITHUB_WORKSPACE/public-tests-2025
-          ls -R $GITHUB_WORKSPACE/public-tests-2025
+          git clone --recurse-submodules https://github.com/se-c-cpp-prog/public-tests-2025.git $GITHUB_WORKSPACE/public-tests-2025
+          cd $GITHUB_WORKSPACE/public-tests-2025
+          git submodule update --init --recursive
+          ls -R testdata || true
 
       - name: Verify test suite location
         run: |
           if [ ! -f "$GITHUB_WORKSPACE/public-tests-2025/main.py" ]; then
             echo "Error: public-tests-2025/main.py not found!"
+            exit 1
+          fi
+          if [ ! -d "$GITHUB_WORKSPACE/public-tests-2025/testdata/math/input" ]; then
+            echo "Error: testdata folder missing!"
             exit 1
           fi
 
