--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,12 +34,14 @@ jobs:
           fi
           ls -la
 
-      - name: Clone 2025 test repository
+      - name: Clone 2025 test repository and data
         run: |
           echo "Cloning public-tests-2025..."
           git clone https://github.com/se-c-cpp-prog/public-tests-2025.git $GITHUB_WORKSPACE/public-tests-2025
           cd $GITHUB_WORKSPACE/public-tests-2025
-          echo "Fetching submodule testdata..."
+          echo "Resetting testdata directory..."
+          rm -rf testdata
+          echo "Fetching testdata..."
           git clone https://github.com/se-c-cpp-prog/testdata.git testdata
           ls -R testdata || true
 
