--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,22 +10,18 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          path: .
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
-
-      - name: Install GCC
+      - name: Install GCC, Python, NumPy
         run: |
           sudo apt-get update
-          sudo apt-get install -y gcc
+          sudo apt-get install -y gcc python3 python3-pip git
+          python3 -m pip install --upgrade pip
+          python3 -m pip install numpy
 
       - name: Build matrix calculator
         run: |
@@ -33,7 +29,26 @@ jobs:
           gcc main.c -std=c2x -O2 -lm -o matrix
           ls -la
 
+      - name: Download ITMO 2025 test suite (public)
+        run: |
+          echo "Downloading public-tests-2025..."
+          git clone --depth 1 https://github.com/se-c-cpp-prog/public-tests-2025.git
+          cd public-tests-2025
+          echo "Fetching testdata..."
+          curl -L -o testdata.zip https://github.com/se-c-cpp-prog/testdata/archive/refs/heads/main.zip
+          unzip -q testdata.zip
+          mv testdata-main testdata
+          rm testdata.zip
+          ls -R testdata | head -30
+
+      - name: Verify testdata presence
+        run: |
+          if [ ! -d "public-tests-2025/testdata/math/input" ]; then
+            echo "Error: testdata/math/input missing."
+            exit 1
+          fi
+
       - name: Run ITMO 2025 matrix tests
         run: |
-          echo "Running official test suite..."
+          echo "Running test suite..."
           python3 public-tests-2025/main.py --program ./matrix --suite math
