--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,10 +16,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install GCC, Python, NumPy
+      - name: Install GCC, Python, and NumPy
         run: |
           sudo apt-get update
-          sudo apt-get install -y gcc python3 python3-pip git
+          sudo apt-get install -y gcc python3 python3-pip unzip
           python3 -m pip install --upgrade pip
           python3 -m pip install numpy
 
@@ -29,16 +29,17 @@ jobs:
           gcc main.c -std=c2x -O2 -lm -o matrix
           ls -la
 
-      - name: Download ITMO 2025 test suite (public)
+      - name: Download ITMO 2025 test suite and data
         run: |
-          echo "Downloading public-tests-2025..."
+          echo "Cloning public-tests-2025..."
           git clone --depth 1 https://github.com/se-c-cpp-prog/public-tests-2025.git
+
+          echo "Fetching testdata archive..."
           cd public-tests-2025
-          echo "Fetching testdata..."
-          curl -L -o testdata.zip https://github.com/se-c-cpp-prog/testdata/archive/refs/heads/main.zip
-          unzip -q testdata.zip
+          curl -L -O https://github.com/se-c-cpp-prog/testdata/archive/refs/heads/main.zip
+          unzip -q main.zip
           mv testdata-main testdata
-          rm testdata.zip
+          rm main.zip
           ls -R testdata | head -30
 
       - name: Verify testdata presence
