--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,10 +16,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install GCC, Python, and NumPy
+      - name: Install GCC, Python, NumPy
         run: |
           sudo apt-get update
-          sudo apt-get install -y gcc python3 python3-pip unzip
+          sudo apt-get install -y gcc python3 python3-pip tar git
           python3 -m pip install --upgrade pip
           python3 -m pip install numpy
 
@@ -29,25 +29,20 @@ jobs:
           gcc main.c -std=c2x -O2 -lm -o matrix
           ls -la
 
-      - name: Download ITMO 2025 test suite and data
+      - name: Download public-tests-2025 and testdata
         run: |
           echo "Cloning public-tests-2025..."
           git clone --depth 1 https://github.com/se-c-cpp-prog/public-tests-2025.git
 
-          echo "Fetching testdata archive (zip)..."
+          echo "Downloading testdata tarball..."
           cd public-tests-2025
-          curl -LJO https://github.com/se-c-cpp-prog/testdata/archive/refs/heads/main.zip
-
-          echo "Checking downloaded file..."
-          ls -lh main.zip || true
-          file main.zip || true
-          unzip -q main.zip || (echo "Unzip failed — corrupted download" && exit 1)
-
-          mv testdata-main testdata
-          rm main.zip
+          curl -L -o testdata.tar.gz https://api.github.com/repos/se-c-cpp-prog/testdata/tarball/main
+          mkdir testdata
+          tar -xzf testdata.tar.gz --strip-components=1 -C testdata
+          rm testdata.tar.gz
           ls -R testdata | head -30
 
-      - name: Verify testdata presence
+      - name: Verify testdata structure
         run: |
           if [ ! -d "public-tests-2025/testdata/math/input" ]; then
             echo "Error: testdata/math/input missing."
@@ -56,5 +51,5 @@ jobs:
 
       - name: Run ITMO 2025 matrix tests
         run: |
-          echo "Running official tests..."
+          echo "Running tests..."
           python3 public-tests-2025/main.py --program ./matrix --suite math
