--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,13 +13,13 @@ jobs:
     timeout-minutes: 10
 
     steps:
-      - name: Checkout repository
+      - name: Checkout student repository
         uses: actions/checkout@v4
 
       - name: Install GCC, Python, NumPy
         run: |
           sudo apt-get update
-          sudo apt-get install -y gcc python3 python3-pip tar git
+          sudo apt-get install -y gcc python3 python3-pip git
           python3 -m pip install --upgrade pip
           python3 -m pip install numpy
 
@@ -29,19 +29,14 @@ jobs:
           gcc main.c -std=c2x -O2 -lm -o matrix
           ls -la
 
-      - name: Download public-tests-2025 and testdata
+      - name: Clone official 2025 tests and testdata via git
         run: |
-          echo "Cloning public-tests-2025..."
+          echo "Cloning test repositories through git..."
           git clone --depth 1 https://github.com/se-c-cpp-prog/public-tests-2025.git
-
-          echo "Downloading testdata tarball from codeload..."
           cd public-tests-2025
           rm -rf testdata
-          mkdir testdata
-          curl -L -o testdata.tar.gz https://codeload.github.com/se-c-cpp-prog/testdata/tar.gz/main
-          tar -xzf testdata.tar.gz --strip-components=1 -C testdata
-          rm testdata.tar.gz
-          echo "Sample files:"
+          git clone --depth 1 https://github.com/se-c-cpp-prog/testdata.git testdata
+          echo "Contents of testdata/math/input:"
           ls -R testdata/math/input | head -20
 
       - name: Verify testdata structure
