--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,51 +2,30 @@
 
 on:
   push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:
 
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
-
     steps:
-      - name: Checkout student repository
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Install GCC, Python, NumPy
+      - name: Install GCC and Python dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y gcc python3 python3-pip git
-          python3 -m pip install --upgrade pip
-          python3 -m pip install numpy
+          sudo apt-get install -y gcc python3 python3-pip
+          pip install numpy
 
-      - name: Build matrix calculator
-        run: |
-          echo "Compiling main.c..."
-          gcc main.c -std=c2x -O2 -lm -o matrix
-          ls -la
+      - name: Build project
+        run: gcc main.c -std=c2x -lm -o matrix
 
-      - name: Clone official 2025 tests and testdata via git
-        run: |
-          echo "Cloning test repositories through git..."
-          git clone --depth 1 https://github.com/se-c-cpp-prog/public-tests-2025.git
-          cd public-tests-2025
-          rm -rf testdata
-          git clone --depth 1 https://github.com/se-c-cpp-prog/testdata.git testdata
-          echo "Contents of testdata/math/input:"
-          ls -R testdata/math/input | head -20
+      - name: Clone ITMO test suite
+        run: git clone https://github.com/se-c-cpp-prog/public-tests-2025.git
 
-      - name: Verify testdata structure
-        run: |
-          if [ ! -d "public-tests-2025/testdata/math/input" ]; then
-            echo "Error: testdata/math/input missing."
-            exit 1
-          fi
+      - name: Copy project executable into test folder
+        run: cp matrix public-tests-2025/
 
-      - name: Run ITMO 2025 matrix tests
-        run: |
-          echo "Running tests..."
-          python3 public-tests-2025/main.py --program ./matrix --suite math
+      - name: Run tests from correct directory
+        working-directory: public-tests-2025
+        run: python3 main.py ..
