--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -23,18 +24,11 @@ jobs:
       - name: Clone ITMO test suite
         run: git clone https://github.com/se-c-cpp-prog/public-tests-2025.git
 
-      - name: Copy project executable into test folder
+      - name: Copy executable to test folder
         run: cp matrix public-tests-2025/
 
-      - name: Run official ITMO tests
+      - name: Run ITMO matrix tests
         working-directory: public-tests-2025
         run: |
           echo "Running ITMO official matrix tests..."
           python3 main.py --program ./matrix --suite math
-
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: matrix-test-results
-          path: public-tests-2025/testdata/math/output/
