--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,12 +5,12 @@ on:
   pull_request:
 
 jobs:
-  test:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install GCC and Python dependencies
         run: |
@@ -18,23 +18,25 @@ jobs:
           sudo apt-get install -y gcc python3 python3-pip
           pip install numpy
 
-      - name: Build project
-        run: gcc main.c -std=c2x -lm -o matrix
+      - name: Build matrix project
+        run: gcc main.c -std=c2x -O2 -lm -o matrix
 
-      - name: Clone ITMO test suite
+      - name: Clone ITMO public test suite
         run: git clone https://github.com/se-c-cpp-prog/public-tests-2025.git
 
-      - name: Copy executable to test folder
+      - name: Copy executable into test folder
         run: cp matrix public-tests-2025/
 
-      - name: Run ITMO matrix tests
+      - name: Run official ITMO matrix tests
         working-directory: public-tests-2025
         run: |
           echo "Running ITMO official matrix tests..."
-          python3 main.py --program ./matrix --suite math | tee ../itmo_test_results.txt
+          python3 main.py --program ./matrix --suite math > ../itmo_test_results.txt 2>&1 || true
 
       - name: Upload test results
         uses: actions/upload-artifact@v4
         with:
           name: itmo-matrix-results
-          path: itmo_test_results.txt
+          path: |
+            itmo_test_results.txt
+            public-tests-2025/results.json
